# ai-agent-ttt-exhibition

./: .gitignore  README.md
agent/: .env.example  README.md  pyproject.toml
agent/UnityAgent/: .gitignore  README.md
agent/UnityAgent/Assets/KAWAII_ANIMATIOMS_100/Documentation/: KAWAII_ANIMATIOMS_100.txt
agent/UnityAgent/Assets/Scenes/: SampleScene.unity
agent/UnityAgent/Assets/Scripts/: AutoBlink.cs  GameBoardUI.cs  GlobalVariables.cs  QuQu.cs  SetQuQuAnimatorOnExit.cs  Telop.cs  WavUtility.cs  WebSocketClient.cs
agent/UnityAgent/Assets/lilToon/Editor/: CurrentRP.txt
agent/UnityAgent/ProjectSettings/: PackageManagerSettings.asset  lilToonSetting.json
agent/src/backend/: README.md  game_api.py  game_master.py  game_structures.py
master/: .env.example  README.md  pyproject.toml
master/scripts/: cleanup_modules.sh  control_client.py  run_all_modules.sh
master/simulator/: __main__.py  board_ui.py  hw_simulator.py
master/simulator/hw/: index.html  main.py  start.sh
master/src/master/: __main__.py  config.py  main.py
master/src/master/adapters/: algorithm_strategy.py  anthropic_client.py  control_handler.py  errors.py  llm_client.py  llm_reaction_adapter.py  llm_strategy.py  llm_utils.py  openai_client.py  robot_adapter.py  unity_adapter.py  vision_adapter.py  ws_server.py
master/src/master/application/: ai_turn.py  game_manager.py  human_turn.py  ports.py
master/src/master/domain/: board.py  entertaining_ai.py  errors.py  game_phase.py  game_rule.py  minimax.py  models.py
master/tests/integration/: test_ai_verification.py  test_human_polling.py  test_llm_fallback.py  test_normal_game.py  test_timeout_disconnect.py
master/tests/mocks/: mock_llm.py  mock_robot.py  mock_unity.py  mock_vision.py
master/tests/unit/: test_ai_turn.py  test_board.py  test_entertaining_ai.py  test_game_rule.py  test_human_turn.py  test_minimax.py
models/: コマ10個.stl  滑り台基部.stl  (+2 more)
sushitech_agent/: .gitignore  pyproject.toml
sushitech_agent/UnityAgent/: README.md
sushitech_agent/UnityAgent/Assets/Scenes/: SampleScene.unity
sushitech_agent/UnityAgent/Assets/Scripts/: GlobalVariables.cs  ImageSwitcher.cs  WavUtility.cs
sushitech_agent/src/backend/: game_structures.py
(+70 files in other folders)
