[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sushitech-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.32.0",
    "websockets>=16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]