[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "master"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0,<14.0",
    "openai>=1.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/master"]
