[project]
name = "master"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0,<14.0",
    "anthropic>=0.40.0,<1.0",
    "openai>=1.0,<3.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master"]
