[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sushitech-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "openai>=2.29.0",
    "uvicorn>=0.32.0",
    "websockets>=16.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]